--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio: ^4.0.0
+  http: ^0.13.3
+  html: ^0.15.0
+
+  postgres: ^2.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
